<resources>
    <string name="app_name">GestionRecursos</string>

    <!--
    Gestión de recursos
    -->
    <string name="tvTitulo1">Gestion Recursos</string>
    <string name="tvVersionAndroidLB">1. Versión Android</string>
    <string name="tvVersionAndroid"></string>
    <string name="tvLight">2.Flashlight</string>
    <string name="btnOff">Off</string>
    <string name="btnOn">On</string>
    <string name="tvLevelBaterryLB">3.Level of Batery</string>
    <string name="tvLevelBaterry"></string>
    <string name="tvState">4.Conection:</string>
    <string name="tvTitulo2">Gestion Permisos</string>
    <string name="tvDactilar">Status Permission Fingerprint</string>
    <string name="tvCamera">Status Permission Camera</string>
    <string name="tvContactos">Status Permission Contactos</string>
    <string name="tvLlamadas">Status Permission Llamadas</string>
    <string name="tvEws">Status Permission External Storage</string>
    <string name="tvRS">Status Permission Read Storage</string>
    <string name="tvInternet">Status Permission Internet</string>
    <string name="btnCheckPermission">Check Permission System</string>
    <string name="btnRequestPermission">Request Permission Camera</string>
    <string name="btnRequestPermissionContact">Request Permission Contactos</string>
    <string name="btnRequestPermissionCall">Request Permission Llamadas</string>
    <string name="btnRequestPermissionRS">Request Permission Read Storage</string>
    <string name="btnRequestPermissionES">Request Permission External Storage</string>
    <string name="etArchivo">Enter the file name</string>
    <string name="btnSaveFile">Save File</string>

</resources>