<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvTitulo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tvTitulo2"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvDactilar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3B9C27B0"
        android:padding="5dp"
        android:text="@string/tvDactilar" />

    <TextView
        android:id="@+id/tvCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3B9C27B0"
        android:padding="5dp"
        android:text="@string/tvCamera" />

    <TextView
        android:id="@+id/tvEws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3B9C27B0"
        android:padding="5dp"
        android:text="@string/tvEws" />

    <TextView
        android:id="@+id/tvRS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3B9C27B0"
        android:padding="5dp"
        android:text="@string/tvRS" />

    <TextView
        android:id="@+id/tvInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3B9C27B0"
        android:padding="5dp"
        android:text="@string/tvInternet" />
    <TextView
        android:id="@+id/tvContactos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3B9C27B0"
        android:padding="5dp"
        android:text="@string/tvContactos" />
    <TextView
        android:id="@+id/tvLlamadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3B9C27B0"
        android:padding="5dp"
        android:text="@string/tvLlamadas" />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

    <Button
        android:id="@+id/btnCheckPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCheckPermission"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnRequestPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRequestPermission"
        android:layout_weight="1"/>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <Button
            android:id="@+id/btnRequestPermissionCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRequestPermissionCall"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnRequestPermissionContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRequestPermissionContact"
            android:layout_weight="1"/>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <Button
            android:id="@+id/btnRequestPermissionRS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRequestPermissionRS"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnRequestPermissionES"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRequestPermissionES"
            android:layout_weight="1"/>

    </TableRow>
    <TextView
        android:id="@+id/tvResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvTitulo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/tvTitulo1"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvVersionAndroidLB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvVersionAndroidLB" />

    <TextView
        android:id="@+id/tvVersionAndroid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tvVersionAndroid" />

    <TextView
        android:id="@+id/tvLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLight" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <Button
            android:id="@+id/btnOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnOff" />

        <Button
            android:id="@+id/btnOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnOn" />
    </TableRow>

    <TextView
        android:id="@+id/tvLevelBaterryLB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLevelBaterryLB" />

    <TextView
        android:id="@+id/tvLevelBaterry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tvLevelBaterry" />

    <ProgressBar
        android:id="@+id/pbLevelBaterry"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvConectionLB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvState" />

    <TextView
        android:id="@+id/tvConexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" />

    <EditText
        android:id="@+id/etArchivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etArchivo"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSaveFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSaveFile" />

</LinearLayout>